# advent-of-code-2019-ocaml

./: 6B.in  8B.in  aoc.ml  day  day1  day1.ml  day10  day10.ml  day11  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day2  day2.ml  day3  day3.ml  day4  day4.ml  day5  day5.ml  day6  day6.ml  day7  day7.ml  day8  day8.ml  day9  day9.ml  dune  intCodeComputer.ml  makefile  opam  run  util.ml
