(library
  (name util)
  (libraries containers containers.data unix ppx_deriving)
  (modules Util)
  (preprocess (pps ppx_deriving.show)))

(library
  (name intCodeComputer)
  (libraries containers containers.data unix ppx_deriving util)
  (modules IntCodeComputer)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day1)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day1)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day2)
  (libraries containers containers.data unix ppx_deriving util intCodeComputer)
  (modules Day2)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day3)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day3)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day4)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day4)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day5)
  (libraries containers containers.data unix ppx_deriving util intCodeComputer)
  (modules Day5)
  (preprocess (pps ppx_deriving.show)))
