(library
  (name util)
  (libraries containers containers.data unix ppx_deriving)
  (modules Util)
  (preprocess (pps ppx_deriving.show)))

(library
  (name intCodeComputer)
  (libraries containers containers.data gen unix ppx_deriving util)
  (modules IntCodeComputer)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day1)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day1)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day2)
  (libraries containers containers.data unix ppx_deriving util intCodeComputer)
  (modules Day2)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day3)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day3)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day4)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day4)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day5)
  (libraries containers containers.data unix ppx_deriving util intCodeComputer)
  (modules Day5)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day6)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day6)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day7)
  (libraries containers containers.data gen unix ppx_deriving util intCodeComputer)
  (modules Day7)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day8)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day8)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day9)
  (libraries containers containers.data gen unix ppx_deriving util intCodeComputer)
  (modules Day9)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day10)
  (libraries containers containers.data unix ppx_deriving util)
  (modules Day10)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day11)
  (libraries containers containers.data gen unix ppx_deriving util intCodeComputer)
  (modules Day11)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day12)
  (libraries containers containers.data gen unix ppx_deriving util)
  (modules Day12)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day13)
  (libraries containers containers.data gen unix ppx_deriving util intCodeComputer)
  (modules Day13)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day14)
  (libraries containers containers.data gen unix ppx_deriving util)
  (modules Day14)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name day15)
  (libraries containers containers.data gen unix ppx_deriving util intCodeComputer)
  (modules Day15)
  (preprocess (pps ppx_deriving.show)))
